# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactory/include/: AbstractFactory.hpp
AbstractFactory/source/: AbstractFactory.cpp  CMakeLists.txt
AbstractFactory/test/: AbstractFactoryTest.cpp  CMakeLists.txt
Builder/: CMakeLists.txt
Builder/include/: Builder.hpp
Builder/source/: Builder.cpp  CMakeLists.txt
Builder/test/: BuilderTest.cpp  CMakeLists.txt
Factory/: CMakeLists.txt
Factory/include/: Factory.hpp
Factory/source/: CMakeLists.txt  Factory.cpp
Factory/test/: CMakeLists.txt  FactoryTest.cpp
Singleton/include/: Singleton.hpp
Singleton/source/: CMakeLists.txt  Singleton.cpp
Singleton/test/: CMakeLists.txt  SingletonTest.cpp
